SONARPLUGINS-106 Make changes to the java script to check the bounds of the percentage variable.  Make sure it isn't less than 0 or greater than 100 since the UI is displaying a percentage value.  Also change the css in order to define the z-index for the percentage container to always appear above the percentage bar.

--- a/src/main/resources/static/comp_analysis/comp_an_css.css
+++ b/src/main/resources/static/comp_analysis/comp_an_css.css
@@ -129,6 +129,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e80408', end
 
 .percentage-container {
 	position: relative;
+	z-index: 1; /*Want the percentage box over the gradient */
 }
 .percentage label {
 	margin-left: -2px;
